Fixed issue with tags not showing up, added css to functional style sheet so that tags are spaced out and have commas between them.

--- a/src/files/css/function.css
+++ b/src/files/css/function.css
@@ -81,6 +81,18 @@ nav.nav_right {
     flex:1;
 }
 
+span.post_tag {
+    padding-left: 4px;
+}
+
+span.post_tag:after {
+    content: ",";
+}
+
+span.post_tag:last-child:after {
+    content: "";
+}
+
 
 /*mobile specific tweaks*/
 @media screen and (max-width: 44em) {
